--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
     "type": "REST",
     "lang": {
       "en-US": {
-        "name": "REST Activity (Workflow API v1.1)",
-        "description": "An example REST activity using workflow API v1.1 format."
+        "name": "Test Rest API(NMS)",
+        "description": "Test Desk(NMS)"
       }
     },
     "arguments": {
@@ -26,21 +26,21 @@
             "foundSignupDate": ""
           }
         ],
-        "url": "https://some-endpoint.com/execute"
+        "url": "https://sf-ex-ca2.onrender.com/execute"
       }
     },
     "configurationArguments": {
       "save": {
-        "url": "URI/for/your/activity/save"
+        "url": "https://sf-ex-ca2.onrender.com/save"
       },
       "publish": {
-        "url": "URI/for/your/activity/publish"
+        "url": "https://sf-ex-ca2.onrender.com/publish"
       },
       "validate": {
-        "url": "URI/for/your/activity/validate"
+        "url": "https://sf-ex-ca2.onrender.com/validate"
       },
       "stop": {
-        "url": "URI/for/your/activity/stop"
+        "url": "https://sf-ex-ca2.onrender.com/stop"
       }
     },
     "wizardSteps": [
