--- a/config.json
+++ b/config.json
@@ -34,7 +34,8 @@
         "url": "https://sf-ex-ca2.onrender.com/publish"
       },
       "validate": {
-        "url": "https://sf-ex-ca2.onrender.com/validate"
+        "url": "https://sf-ex-ca2.onrender.com/validate",
+        "body" : { "valiTest1" : "valiTest1" }
       },
       "stop": {
         "url": "https://sf-ex-ca2.onrender.com/stop"
