--- a/config.json
+++ b/config.json
@@ -34,8 +34,7 @@
         "url": "https://sf-ex-ca2.onrender.com/publish"
       },
       "validate": {
-        "url": "https://sf-ex-ca2.onrender.com/validate",
-        "body" : { "valiTest1" : "valiTest1" }
+        "url": "https://sf-ex-ca2.onrender.com/validate"
       },
       "stop": {
         "url": "https://sf-ex-ca2.onrender.com/stop"
